lil clean ups - gui neaten. Fix out of bounds

--- a/res/main.css
+++ b/res/main.css
@@ -4,6 +4,13 @@ body {
 	padding: 0;
 	font-family: helvetica, arial, sans-serif;
 }
+html {
+    overflow: hidden;
+}
+
+body {
+    overflow: auto;
+}
 
 #board {
 	overflow: hidden;
@@ -23,7 +30,7 @@ body {
 #watch {
 	width: 120px;
 	height: 180px;
-	font-size: 20pt;
+	font-size: 14pt;
 	position:absolute;
 	top: 0;
 	left: 0;
@@ -37,9 +44,12 @@ body {
 	height: 40px;
 	font-size: 14pt;
 	position:absolute;
-	left: 50%;
+	left: 40%;
 	bottom: 0;
 	color: #999;
+	line-height: 40px;
+	text-align: center;
+	padding-top: 10px;
 }
 
 #blocker {
